--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=8000
 JWT_SECRET=SDVHCNSY8E76897YSVB879JEWN98Y3UYSGFBHUYTYF
 DATABASE=mongodb://localhost:27017/Edemy
+USER = rmjbnbhmb52v5llc@ethereal.email
+PASS = 9BqPKrmbp9gVcAg1HV
