--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ JWT_SECRET=SDVHCNSY8E76897YSVB879JEWN98Y3UYSGFBHUYTYF
 DATABASE=mongodb://localhost:27017/Edemy
 USER = rmjbnbhmb52v5llc@ethereal.email
 PASS = 9BqPKrmbp9gVcAg1HV
+BT_MERCHANT_ID = 466xz96hmm5qkpbc
+BT_PUBLIC_KEY = h98w3ctx5hwf9czm
+BT_PRIVATE-KEY = 98f452fb7337dc1b2d40579f3dfdb99b
