imageUpload to filebase complete. Successfully returns {Bucket, Key, cid}

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ PASS = 9BqPKrmbp9gVcAg1HV
 BT_MERCHANT_ID = 466xz96hmm5qkpbc
 BT_PUBLIC_KEY = h98w3ctx5hwf9czm
 BT_PRIVATE-KEY = 98f452fb7337dc1b2d40579f3dfdb99b
+AWS_ACCESS_KEY_ID = 9726BFC2E1CEE72CDA45  
+AWS_SECRET_ACCESS_KEY = tk1cjJHkebtMdvGLiipTNIe08U8bqyZ8b7AIykrY
+AWS_REGION=us-east-1
+
