--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8000
 JWT_SECRET=SDVHCNSY8E76897YSVB879JEWN98Y3UYSGFBHUYTYF
-DATABASE=mongodb://localhost:27017/Edemy
+DATABASE=mongodb+srv://yullu:Tokyo11%403@cluster0.fgmeo.mongodb.net/?retryWrites=true&w=majority
 USER = rmjbnbhmb52v5llc@ethereal.email
 PASS = 9BqPKrmbp9gVcAg1HV
 BT_MERCHANT_ID = 466xz96hmm5qkpbc
