--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "express-jwt": "^6.1.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "4.10",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.3",
     "nodemailer": "^6.7.3",
-    "passport": "^0.5.2",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0"
   },
