course schema and lesson schema created /course route created isInstructor middleware created changes made to all schemas to fix ref issue to ref:"User" controller to store course in database created

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "nodemailer": "^6.7.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0"
+    "passport-local-mongoose": "^7.0.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
