--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "aws-sdk": "^2.1221.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
-    "braintree": "^3.11.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-formidable": "^1.2.0",
     "express-jwt": "^6.1.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
