--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.171.0",
+    "@google-cloud/storage": "^6.7.0",
     "aws-sdk": "^2.1221.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
