--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.171.0",
     "@google-cloud/storage": "^6.7.0",
     "aws-sdk": "^2.1221.0",
+    "axios": "^1.2.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
@@ -31,7 +32,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
